--- a/src/index.css
+++ b/src/index.css
@@ -75,3 +75,15 @@
     width: 100%;
     height: 100%;
 }
+
+/* LIDA COM O SWIPER DOS AWARDS (LOCALIZADO NO ABOUT)  */
+
+.mySliderAwards-container {
+    width: 600px;
+    /* height: 320px; */
+    max-width: 100%;
+}
+
+.mySliderAwards-container::part(container) {
+    padding-bottom: 50px;
+}
